build: Pull common actions to root level
- Introduce run.sh
- Pull common documention to root level readme

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "engine", "visualiser"
-  ],
+  "packages": ["engine", "vue-visualiser"],
   "version": "independent",
   "npmClient": "yarn"
 }
