--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["engine", "vue-visualiser", "frontend-app"],
+  "packages": ["engine", "vue-visualiser", "frontend-app", "server"],
   "npmClient": "yarn",
   "version": "independent",
   "command": {
