--- a/engine/package.json
+++ b/engine/package.json
@@ -9,6 +9,7 @@
     "name": "Suman Maity"
   },
   "readme": "https://github.com/sumanmaity112/pairing-matrix/blob/main/engine/README.md",
+  "homepage": "https://github.com/sumanmaity112/pairing-matrix/tree/main/engine#pairing-matrix-engine",
   "repository": {
     "type": "git",
     "url": "https://github.com/sumanmaity112/pairing-matrix.git",
