--- a/vue-visualiser/package.json
+++ b/vue-visualiser/package.json
@@ -8,6 +8,7 @@
     "name": "Suman Maity"
   },
   "readme": "https://github.com/sumanmaity112/pairing-matrix/blob/main/vue-visualiser/README.md",
+  "homepage": "https://github.com/sumanmaity112/pairing-matrix/tree/main/vue-visualiser#pairing-matrix-visualiser-vue",
   "repository": {
     "type": "git",
     "url": "https://github.com/sumanmaity112/pairing-matrix.git",
