--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           context: ${{ github.workspace }}/${{ env.SERVICE_NAME }}
           tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
           push: true
       - name: Update docker hub description
         uses: peter-evans/dockerhub-description@v2
