--- a/vue-visualiser/package.json
+++ b/vue-visualiser/package.json
@@ -26,7 +26,7 @@
     "vue": "^3.0.0"
   },
   "dependencies": {
-    "d3": "^7.3.0"
+    "pairing-matrix-charts": "0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
