--- a/vue-visualiser/package.json
+++ b/vue-visualiser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pairing-matrix-vue-visualiser",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": false,
   "main": "dist/pairing-matrix-vue-visualiser.js",
   "license": "MIT",
@@ -26,7 +26,7 @@
     "vue": "^3.0.0"
   },
   "dependencies": {
-    "pairing-matrix-charts": "0.1.0"
+    "pairing-matrix-charts": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
