--- a/charts/package.json
+++ b/charts/package.json
@@ -2,7 +2,7 @@
   "name": "pairing-matrix-charts",
   "version": "0.3.0",
   "description": "Core logic to create D3 visualisation for pairing matrix",
-  "main": "index.js",
+  "main": "dist/pairing-matrix-charts.js",
   "license": "MIT",
   "type": "module",
   "author": {
@@ -16,8 +16,24 @@
     "directory": "charts"
   },
   "private": false,
+  "files": [],
+  "scripts": {
+    "build": "NODE_ENV=production webpack --config build/webpack.prod.conf.js --progress",
+    "build:dev": "NODE_ENV=dev webpack --config build/webpack.dev.conf.js --progress",
+    "prepublishOnly": "yarn build"
+  },
   "dependencies": {
     "d3": "^7.4.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   },
   "engines": {
     "node": ">=16"
