--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -14,18 +14,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "pairing-matrix-vue-visualiser": "^0.3.0",
-    "vue": "^3.0.0"
+    "core-js": "^3.22.4",
+    "pairing-matrix-vue-visualiser": "^0.3.3",
+    "vue": "^3.2.33"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
-    "@vue/compiler-sfc": "^3.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/compiler-sfc": "^3.2.33",
+    "@babel/eslint-parser": "^7.17.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-vue": "^8.7.1"
   },
   "eslintConfig": {
     "root": true,
@@ -37,7 +37,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser",
+      "requireConfigFile": false
     },
     "rules": {}
   },
