--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -19,11 +19,11 @@
     "vue": "^3.2.33"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^5.0.4",
-    "@vue/cli-service": "^5.0.4",
-    "@vue/cli-plugin-eslint": "^5.0.4",
-    "@vue/compiler-sfc": "^3.2.33",
     "@babel/eslint-parser": "^7.17.0",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
+    "@vue/compiler-sfc": "^3.2.33",
     "eslint": "^8.14.0",
     "eslint-plugin-vue": "^8.7.1"
   },
@@ -40,7 +40,9 @@
       "parser": "@babel/eslint-parser",
       "requireConfigFile": false
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": 0
+    }
   },
   "browserslist": [
     "> 1%",
