--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -21,9 +21,16 @@
     "test:watch": "jest --watchAll=true"
   },
   "dependencies": {
-    "d3": "^7.4.4"
+    "d3-array": "^3.1.6",
+    "d3-chord": "^3.0.1",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.1.0"
   },
   "devDependencies": {
+    "d3": "^7.4.4",
     "@babel/preset-env": "^7.18.2",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0"
