--- a/packages/vue-visualiser/package.json
+++ b/packages/vue-visualiser/package.json
@@ -20,6 +20,8 @@
   "scripts": {
     "build": "vue-cli-service build --target lib --entry ./src/index.js",
     "build:dev": "yarn build --watch --mode development",
+    "test": "jest --watchAll=false --coverage",
+    "test:watch": "jest --watchAll=true",
     "prepublishOnly": "yarn build && rm -rf ./dist/demo.html"
   },
   "peerDependencies": {
@@ -32,11 +34,57 @@
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.2.37",
+    "@vue/test-utils": "^2.1.0",
+    "@vue/vue3-jest": "^29.1.1",
+    "babel-jest": "^29.1.2",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
+    "jest-serializer-vue": "^2.0.2",
     "vue": "^3.2.37"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "vue",
+      "js"
+    ],
+    "moduleNameMapper": {
+      "d3-array": "<rootDir>/node_modules/d3-array/dist/d3-array.min.js",
+      "d3-selection": "<rootDir>/node_modules/d3-selection/dist/d3-selection.min.js",
+      "d3-chord": "<rootDir>/node_modules/d3-chord/dist/d3-chord.min.js",
+      "d3-path": "<rootDir>/node_modules/d3-path/dist/d3-path.min.js",
+      "d3-scale-chromatic": "<rootDir>/node_modules/d3-scale-chromatic/dist/d3-scale-chromatic.min.js",
+      "d3-scale": "<rootDir>/node_modules/d3-scale/dist/d3-scale.min.js",
+      "d3-interpolate": "<rootDir>/node_modules/d3-interpolate/dist/d3-interpolate.min.js",
+      "d3-color": "<rootDir>/node_modules/d3-color/dist/d3-color.min.js",
+      "d3-format": "<rootDir>/node_modules/d3-format/dist/d3-format.min.js",
+      "d3-time": "<rootDir>/node_modules/d3-time/dist/d3-time.min.js",
+      "d3-time-format": "<rootDir>/node_modules/d3-time-format/dist/d3-time-format.min.js",
+      "d3-shape": "<rootDir>/node_modules/d3-shape/dist/d3-shape.min.js"
+    },
+    "transform": {
+      "^.+\\.vue$": "@vue/vue3-jest",
+      "^.+\\js$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(pairing-matrix-charts))"
+    ],
+    "testEnvironment": "jsdom",
+    "testEnvironmentOptions": {
+      "customExportConditions": [
+        "node",
+        "node-addons"
+      ]
+    },
+    "snapshotSerializers": [
+      "jest-serializer-vue"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/__tests__/data/"
+    ]
+  }
 }
