--- a/packages/frontend-app/package.json
+++ b/packages/frontend-app/package.json
@@ -9,48 +9,23 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test": "jest --watchAll=false --coverage",
-    "test:watch": "jest --watchAll=true"
+    "serve": "vite dev",
+    "build": "vite build",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest"
   },
   "dependencies": {
-    "core-js": "^3.23.3",
     "pairing-matrix-vue-visualiser": "^1.0.1",
-    "vue": "^3.2.37"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.2",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "@vue/compiler-sfc": "^3.2.37",
-    "@vue/test-utils": "^2.1.0",
-    "@vue/vue3-jest": "^29.1.1",
-    "babel-jest": "^29.1.2",
-    "eslint": "^8.19.0",
-    "eslint-plugin-vue": "^9.2.0",
-    "jest": "^29.1.2",
-    "jest-environment-jsdom": "^29.1.2",
-    "jest-serializer-vue": "^2.0.2"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser",
-      "requireConfigFile": false
-    },
-    "rules": {
-      "vue/multi-word-component-names": 0
-    }
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitest/coverage-c8": "^0.25.2",
+    "@vue/test-utils": "^2.2.3",
+    "jest-serializer-vue-tjw": "^3.19.0",
+    "jsdom": "^20.0.2",
+    "vite": "3.2.4",
+    "vitest": "^0.25.2"
   },
   "browserslist": [
     "> 1%",
@@ -66,49 +41,5 @@
   },
   "bugs": {
     "url": "https://github.com/sumanmaity112/pairing-matrix/issues"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "vue",
-      "js"
-    ],
-    "moduleNameMapper": {
-      "d3-array": "<rootDir>/node_modules/d3-array/dist/d3-array.min.js",
-      "d3-selection": "<rootDir>/node_modules/d3-selection/dist/d3-selection.min.js",
-      "d3-chord": "<rootDir>/node_modules/d3-chord/dist/d3-chord.min.js",
-      "d3-path": "<rootDir>/node_modules/d3-path/dist/d3-path.min.js",
-      "d3-scale-chromatic": "<rootDir>/node_modules/d3-scale-chromatic/dist/d3-scale-chromatic.min.js",
-      "d3-scale": "<rootDir>/node_modules/d3-scale/dist/d3-scale.min.js",
-      "d3-interpolate": "<rootDir>/node_modules/d3-interpolate/dist/d3-interpolate.min.js",
-      "d3-color": "<rootDir>/node_modules/d3-color/dist/d3-color.min.js",
-      "d3-format": "<rootDir>/node_modules/d3-format/dist/d3-format.min.js",
-      "d3-time": "<rootDir>/node_modules/d3-time/dist/d3-time.min.js",
-      "d3-time-format": "<rootDir>/node_modules/d3-time-format/dist/d3-time-format.min.js",
-      "d3-shape": "<rootDir>/node_modules/d3-shape/dist/d3-shape.min.js",
-      "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "transform": {
-      "^.+\\.vue$": "@vue/vue3-jest",
-      "^.+\\js$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "/node_modules/(?!(pairing-matrix-vue-visualiser))"
-    ],
-    "collectCoverageFrom": [
-      "src/**"
-    ],
-    "testEnvironment": "jsdom",
-    "testEnvironmentOptions": {
-      "customExportConditions": [
-        "node",
-        "node-addons"
-      ]
-    },
-    "snapshotSerializers": [
-      "jest-serializer-vue"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/__tests__/data/"
-    ]
   }
 }
