--- a/packages/vue-visualiser/package.json
+++ b/packages/vue-visualiser/package.json
@@ -53,18 +53,18 @@
       "js"
     ],
     "moduleNameMapper": {
-      "d3-array": "<rootDir>/node_modules/d3-array/dist/d3-array.min.js",
-      "d3-selection": "<rootDir>/node_modules/d3-selection/dist/d3-selection.min.js",
-      "d3-chord": "<rootDir>/node_modules/d3-chord/dist/d3-chord.min.js",
-      "d3-path": "<rootDir>/node_modules/d3-path/dist/d3-path.min.js",
-      "d3-scale-chromatic": "<rootDir>/node_modules/d3-scale-chromatic/dist/d3-scale-chromatic.min.js",
-      "d3-scale": "<rootDir>/node_modules/d3-scale/dist/d3-scale.min.js",
-      "d3-interpolate": "<rootDir>/node_modules/d3-interpolate/dist/d3-interpolate.min.js",
-      "d3-color": "<rootDir>/node_modules/d3-color/dist/d3-color.min.js",
-      "d3-format": "<rootDir>/node_modules/d3-format/dist/d3-format.min.js",
-      "d3-time": "<rootDir>/node_modules/d3-time/dist/d3-time.min.js",
-      "d3-time-format": "<rootDir>/node_modules/d3-time-format/dist/d3-time-format.min.js",
-      "d3-shape": "<rootDir>/node_modules/d3-shape/dist/d3-shape.min.js"
+      "d3-array": "<rootDir>/../charts/node_modules/d3-array/dist/d3-array.min.js",
+      "d3-selection": "<rootDir>/../charts/node_modules/d3-selection/dist/d3-selection.min.js",
+      "d3-chord": "<rootDir>/../charts/node_modules/d3-chord/dist/d3-chord.min.js",
+      "d3-path": "<rootDir>/../charts/node_modules/d3-path/dist/d3-path.min.js",
+      "d3-scale-chromatic": "<rootDir>/../charts/node_modules/d3-scale-chromatic/dist/d3-scale-chromatic.min.js",
+      "d3-scale": "<rootDir>/../charts/node_modules/d3-scale/dist/d3-scale.min.js",
+      "d3-interpolate": "<rootDir>/../charts/node_modules/d3-interpolate/dist/d3-interpolate.min.js",
+      "d3-color": "<rootDir>/../charts/node_modules/d3-color/dist/d3-color.min.js",
+      "d3-format": "<rootDir>/../charts/node_modules/d3-format/dist/d3-format.min.js",
+      "d3-time": "<rootDir>/../charts/node_modules/d3-time/dist/d3-time.min.js",
+      "d3-time-format": "<rootDir>/../charts/node_modules/d3-time-format/dist/d3-time-format.min.js",
+      "d3-shape": "<rootDir>/../charts/node_modules/d3-shape/dist/d3-shape.min.js"
     },
     "transform": {
       "^.+\\.vue$": "@vue/vue3-jest",
